kubernetes/apps/security/authentik/app/referencegrant-ak-outpost.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ak-outpost-middleware-from-media
  namespace: security
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: media
    - group: traefik.io
      kind: Middleware
      name: ak-outpost-authentik-embedded-outpost
  to:
    - group: traefik.io
      kind: Middleware
      name: ak-outpost-authentik-embedded-outpost
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: media
