kubernetes/apps/security/authentik/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authentik-extauth
  namespace: security
spec:
  from:
    - group: gateway.kgateway.dev
      kind: GatewayExtension
      namespace: network
  to:
    - group: ""
      kind: Service
      name: authentik-server
